fixed starter code error

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>Chay suggested using a minimalist design for the timer interface.</p>
         <details>
           <summary>Whiteboard Diagram:</summary>
-          <img src="screenshots/Whiteboard Diagram.png" alt="Whiteboard Diagram">
+          <img src="screenshots/Whiteboard-Diagram.png" alt="Whiteboard Diagram">
         </details>
       </section>
       <section>
